--- a/basicJSdom.html
+++ b/basicJSdom.html
@@ -79,6 +79,7 @@
             console.log(event.target.username.value)
             console.log(document.querySelector('#email').value);
             console.log(event.target.password.value);
+            console.log(document.getElementById('username').value);
            
 
         }
