--- a/basicJSdom.html
+++ b/basicJSdom.html
@@ -72,6 +72,7 @@
                 <input type="submit" value="Register">
             </div>
         </form>
+        <ul id="user"></ul>
     </div>
     <script>
         function saveToBackendStorage(event){
